--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "nodemon": "^2.0.12",
+    "razorpay": "^2.8.3",
     "stripe": "^8.174.0"
   }
 }
